--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "dayjs": "^1.11.7",
     "hserve": "^0.1.2",
     "moment": "^2.29.1",
     "prop-types": "^15.8.1",
@@ -31,8 +32,8 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -115,7 +116,7 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.29.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-autofix": "^1.1.0",
     "eslint-plugin-react": "^7.31.11",
     "faker": "^5.5.3",
