--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-scripts": "^5.0.1",
     "react-toast-notifications": "^2.5.1",
     "react-toastify": "^8.1.0",
+    "react-virtualized": "^9.22.5",
     "redux-saga": "^1.1.3",
     "web-vitals": "^2.1.3"
   },
